# razorrooster

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  razorrooster-prompt.md.txt  razorrooster.md
.github/workflows/: ci.yml
config/: eia_series.yaml  forbidden_phrases.yaml  fred_series.yaml  ingest_schedule.yaml  kalshi.yaml  kalshi_allowed_jurisdictions.yaml  kalshi_sector_keywords.yaml  mispricing.yaml  monitor.yaml  noaa_datasets.yaml  polymarket.yaml  position_engine.yaml  report.yaml  restricted_jurisdictions.yaml  scanner.yaml  sector_keywords.yaml  source_caps.yaml  usgs_minerals.yaml  worldbank_indicators.yaml
docs/: kalshi_connector.md  mispricing.md  monitor.md  pattern_library.md  position_engine.md  reports.md  scanner.md  sop.md  sources.md  user_guide.md  user_guide.md.txt
docs/archive/: razorrooster-prompt-old.md
scripts/: bootstrap.sh
specs/: CALIBRATION_BACKTEST.md  CALIBRATION_BACKTEST_DESIGN.md  CALIBRATION_BACKTEST_TASKS.md  DATA_INGEST.md  DATA_INGEST_DESIGN.md  DATA_INGEST_TASKS.md  KALSHI_CONNECTOR.md  KALSHI_CONNECTOR_DESIGN.md  KALSHI_CONNECTOR_TASKS.md  MISPRICING_DETECTOR.md  MISPRICING_DETECTOR_DESIGN.md  MISPRICING_DETECTOR_TASKS.md  MONITOR.md  MONITOR_DESIGN.md  MONITOR_TASKS.md  PATTERN_LIBRARY.md  PATTERN_LIBRARY_DESIGN.md  PATTERN_LIBRARY_TASKS.md  POLYMARKET_CONNECTOR.md  POLYMARKET_CONNECTOR_DESIGN.md  POLYMARKET_CONNECTOR_TASKS.md  POSITION_ENGINE.md  POSITION_ENGINE_DESIGN.md  POSITION_ENGINE_TASKS.md  REPORT_GENERATOR.md  REPORT_GENERATOR_DESIGN.md  REPORT_GENERATOR_SUPPLEMENT_MULTIVENUE.md  REPORT_GENERATOR_TASKS.md  SIGNAL_SCANNER.md  SIGNAL_SCANNER_DESIGN.md  SIGNAL_SCANNER_TASKS.md
src/razor_rooster/: __init__.py  cli.py
tests/: test_cli_entrypoint.py  test_cli_framing.py  test_package.py
tests/calibration_backtest/: conftest.py  test_bin_resolution.py  test_cli_list_show_compare_prune.py  test_cli_run.py  test_compare.py  test_compare_integration.py  test_compare_ranking.py  test_diagram_hydrate.py  test_disk_budget.py  test_e2e.py  test_errors.py  test_evaluate_class.py  test_framing.py  test_freezer.py  test_imports.py  test_lag.py  test_list_predictions.py  test_migration_m6001.py  test_migration_m6002.py  test_models.py  test_no_side_channels.py  test_performance.py  test_persistence_operations.py  test_phase4_determinism.py  test_polarity.py  test_properties.py  test_prune_run.py  test_reliability.py  test_renderers.py  test_replay.py  test_replay_persistence.py  test_run_id.py  test_schemas.py  test_score_summary.py  test_scoring.py  test_trace_codec.py  test_version.py
tests/data_ingest/: test_acled_connector.py  test_acled_deletions.py  test_backfill.py  test_bdi_via_fred.py  test_cap_enforcement.py  test_config_loader.py  test_connector_base.py  test_credentials.py  test_cycle_report.py  test_disk_budget.py  test_duckdb_store.py  test_eia_connector.py  test_end_to_end_cycle.py  test_federal_register_connector.py  test_fred_connector.py  test_gdelt_events_connector.py  test_m0002_acknowledged_posture.py  test_migrations.py  test_noaa_connector.py  test_normalization.py  test_nrc_adams_connector.py  test_operational_schemas.py  test_provenance.py  test_registry.py  test_regulations_gov_connector.py  test_scheduler.py  test_schemas.py  test_smoke_live_services.py  test_staging_merge.py  test_structured_logging.py  test_usgs_minerals_connector.py  test_who_don_connector.py  test_worldbank_connector.py
tests/gui/: conftest.py  test_cli.py  (+5 more)
(+460 files in other folders)
