[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "razor_rooster"
version = "0.1.0"
description = "Geopolitical event forecasting and calibration engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Daniel Fettke" },
]

dependencies = [
    "click>=8.1",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "jinja2>=3.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pytz>=2024.1",
    "pyyaml>=6.0",
    "scipy>=1.12",
    # Private repo; not on PyPI. Must be pre-installed before `pip install -e .`:
    #   Local: pip install -e ../sloptropy-common
    #   CI:    pip install "sloptropy-common @ git+ssh://git@github.com/sabercat204/sloptropy-common.git@<sha>"
    # Bare name here so an already-installed copy satisfies the dep.
    "sloptropy-common",
    "uvicorn>=0.30",
    "zstandard>=0.22.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-recording>=0.13",
    "ruff>=0.4",
    "pandas-stubs>=2.2",
    "scipy-stubs>=1.17",
    "types-pyyaml>=6.0",
]

[project.scripts]
razor-rooster = "razor_rooster.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["razor_rooster*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "SIM",          # simplify
    "PTH",          # use-pathlib
    "RUF",          # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.mypy]
python_version = "3.11"
strict = false  # global default
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "razor_rooster.data_ingest.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.polymarket_connector.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.pattern_library.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.signal_scanner.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.mispricing_detector.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.position_engine.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.monitor.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.kalshi_connector.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.report_generator.*"
strict = true

[[tool.mypy.overrides]]
module = "razor_rooster.calibration_backtest.*"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers -m 'not smoke and not perf'"
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
    "smoke: smoke tests against live services (deselect by default)",
    "perf: performance gates (deselected by default; run explicitly with '-m perf')",
]

[tool.coverage.run]
source = ["src/razor_rooster"]
branch = true
